fixed icons problem

--- a/src/frontend/web_ui/public/index.html
+++ b/src/frontend/web_ui/public/index.html
@@ -7,6 +7,10 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
     <style>
+
+      :root{
+        --app-dark-text: rgb(56, 80, 123);
+      }
       body{        
         height: 100%;
         /* background-color: bisque; */
